--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vue/composition-api": "^1.1.1",
     "core-js": "^3.6.5",
+    "firebase": "^9.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
