--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vue/composition-api": "^1.1.1",
     "core-js": "^3.6.5",
     "firebase": "^9.0.0",
+    "nft.storage": "^5.1.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2",
