--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
     "@vue/composition-api": "^1.1.1",
     "core-js": "^3.6.5",
+    "express": "^4.17.2",
     "firebase": "^9.0.0",
     "nft.storage": "^5.2.0",
+    "serve-static": "^1.14.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2",
