--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.1.1",
+    "core-js": "^3.6.5",
+    "express": "^4.17.2",
+    "firebase": "^9.0.0",
 
+    "serve-static": "^1.14.2",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.2",
+    "web3": "^1.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
