--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "core-js": "^3.6.5",
     "express": "^4.17.2",
     "firebase": "^9.0.0",
-
+    "nft.storage": "^5.2.0",
     "serve-static": "^1.14.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
