--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "@vue/composition-api": "^1.1.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "core-js": "^3.6.5",
     "firebase": "^9.0.0",
     "nft.storage": "^5.1.3",
@@ -20,6 +23,9 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "node-sass": "^7.0.1",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2"
   }
 }
